--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Conal</title>
     <link rel="stylesheet" href="styles.css" class="css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
@@ -13,14 +13,16 @@
         <div class="img--bar">
             <img 
             class="imgBar"
-            src="https://www.360images.fr/templates/ja_puresite/images/logo-trans.png"></img>
+            src="./img/logo.png"></img>
         </div>
 
         <div class="menu--bar">
-            <div class="bar--items">WELCOME</div>
-            <div class="bar--items">SOLUTIONS</div>
-            <div class="bar--items">VIRTUAL TOURS</div>
-            <div class="bar--items">CONTACTS</div>
+            <div class="bar--items"><a href="services.html">Services</a></div>
+            <div class="bar--items">About</div>
+            <div class="bar--items">Work</div>
+            <div class="bar--items">Blog</div>
+            <div class="bar--items">News</div>
+            <div class="bar--items">Contact</div>
         </div>
     </div>
 
